--- a/otp.html
+++ b/otp.html
@@ -54,14 +54,14 @@
     <script>
         // Your Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyBhCgtAOzaUFr2STB0D8MLEPYY9gsxQ1k8",
-            authDomain: "nishad-2003.firebaseapp.com",
-            databaseURL: "https://nishad-2003-default-rtdb.firebaseio.com",
-            projectId: "nishad-2003",
-            storageBucket: "nishad-2003.firebasestorage.app",
-            messagingSenderId: "498275983867",
-            appId: "1:498275983867:web:7686c69457a318feb5ab5e",
-            measurementId: "G-FVSW9N4RCQ"
+            apiKey: "########################",
+            authDomain: "########################",
+            databaseURL: "########################",
+            projectId: "########################",
+            storageBucket: "########################",
+            messagingSenderId: "########################",
+            appId: "########################",
+            measurementId: "########################"
         };
 
         // Initialize Firebase
