--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 <label for="phone">Phone Number</label>
                 <div class="phone-input-container">
                     <select id="country-code" class="country-code">
-                        <option data-countryCode="IN" value="91" Selected>India (+91)</option>
+                        <option data-countryCode="IN" value="+91" Selected>India (+91)</option>
                         <option data-countryCode="GB" value="44">UK (+44)</option>
                         <option data-countryCode="US" value="1">USA (+1)</option>
                         <optgroup label="Other countries">
